[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/styles/scrollcontainerTheme.tres" type="Theme" id=1]
[ext_resource path="res://assets/styles/scrollcontainer.tres" type="StyleBox" id=2]
[ext_resource path="res://assets/styles/fontStyle.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/styles/textFontStyle.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/img/X.png" type="Texture" id=5]
[ext_resource path="res://scripts/organelas.gd" type="Script" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.282353, 0.792157, 0.894118, 1 )

[node name="organelas" type="Node2D"]
position = Vector2( 296.946, 159.778 )
script = ExtResource( 6 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -297.0
margin_top = -160.0
margin_right = 1069.0
margin_bottom = 609.0
color = Color( 0, 0, 0, 0.694118 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 130.274
margin_right = 630.274
margin_bottom = 391.0
custom_styles/panel = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
margin_left = 130.274
margin_right = 632.274
margin_bottom = 391.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="Control"]
margin_left = 153.336
margin_top = 6.0
margin_right = 383.336
margin_bottom = 36.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Adicionar nova organela"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="line" type="Panel" parent="Control"]
anchor_top = -0.000235653
anchor_bottom = -0.000235653
margin_left = -1.0
margin_top = 39.0921
margin_right = 501.0
margin_bottom = 43.0921
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Control"]
margin_top = 47.0
margin_right = 495.0
margin_bottom = 385.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/ScrollContainer"]
margin_right = 252.0
margin_bottom = 474.0
custom_constants/separation = 2

[node name="Control0" type="VBoxContainer" parent="Control/ScrollContainer/VBoxContainer"]
margin_right = 252.0
margin_bottom = 32.0

[node name="Button" type="Button" parent="Control/ScrollContainer/VBoxContainer/Control0"]
margin_right = 252.0
margin_bottom = 32.0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Núcleo"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control1" type="VBoxContainer" parent="Control/ScrollContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 252.0
margin_bottom = 66.0

[node name="Button" type="Button" parent="Control/ScrollContainer/VBoxContainer/Control1"]
margin_right = 252.0
margin_bottom = 32.0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Complexo de golgi"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control2" type="VBoxContainer" parent="Control/ScrollContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 252.0
margin_bottom = 100.0

[node name="Button" type="Button" parent="Control/ScrollContainer/VBoxContainer/Control2"]
margin_right = 252.0
margin_bottom = 32.0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Cloroplastos"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control3" type="VBoxContainer" parent="Control/ScrollContainer/VBoxContainer"]
margin_top = 102.0
margin_right = 252.0
margin_bottom = 134.0

[node name="Button" type="Button" parent="Control/ScrollContainer/VBoxContainer/Control3"]
margin_right = 252.0
margin_bottom = 32.0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Lisossomo"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control4" type="VBoxContainer" parent="Control/ScrollContainer/VBoxContainer"]
margin_top = 136.0
margin_right = 252.0
margin_bottom = 168.0

[node name="Button" type="Button" parent="Control/ScrollContainer/VBoxContainer/Control4"]
margin_right = 252.0
margin_bottom = 32.0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Mitocondria"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control5" type="VBoxContainer" parent="Control/ScrollContainer/VBoxContainer"]
margin_top = 170.0
margin_right = 252.0
margin_bottom = 202.0

[node name="Button" type="Button" parent="Control/ScrollContainer/VBoxContainer/Control5"]
margin_right = 252.0
margin_bottom = 32.0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Peroxissomo"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control6" type="VBoxContainer" parent="Control/ScrollContainer/VBoxContainer"]
margin_top = 204.0
margin_right = 252.0
margin_bottom = 236.0

[node name="Button" type="Button" parent="Control/ScrollContainer/VBoxContainer/Control6"]
margin_right = 252.0
margin_bottom = 32.0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Retículo Endoplasmático Liso"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control7" type="VBoxContainer" parent="Control/ScrollContainer/VBoxContainer"]
margin_top = 238.0
margin_right = 252.0
margin_bottom = 270.0

[node name="Button" type="Button" parent="Control/ScrollContainer/VBoxContainer/Control7"]
margin_right = 252.0
margin_bottom = 32.0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Retículo Endoplasmático Rugoso"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control8" type="VBoxContainer" parent="Control/ScrollContainer/VBoxContainer"]
margin_top = 272.0
margin_right = 252.0
margin_bottom = 304.0

[node name="Button" type="Button" parent="Control/ScrollContainer/VBoxContainer/Control8"]
margin_right = 252.0
margin_bottom = 32.0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Ribossomos"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control9" type="VBoxContainer" parent="Control/ScrollContainer/VBoxContainer"]
margin_top = 306.0
margin_right = 252.0
margin_bottom = 338.0

[node name="Button" type="Button" parent="Control/ScrollContainer/VBoxContainer/Control9"]
margin_right = 252.0
margin_bottom = 32.0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Vacúolo"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control10" type="VBoxContainer" parent="Control/ScrollContainer/VBoxContainer"]
margin_top = 340.0
margin_right = 252.0
margin_bottom = 372.0

[node name="Button" type="Button" parent="Control/ScrollContainer/VBoxContainer/Control10"]
margin_right = 252.0
margin_bottom = 32.0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Proteína"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control11" type="VBoxContainer" parent="Control/ScrollContainer/VBoxContainer"]
margin_top = 374.0
margin_right = 252.0
margin_bottom = 406.0

[node name="Button" type="Button" parent="Control/ScrollContainer/VBoxContainer/Control11"]
margin_right = 252.0
margin_bottom = 32.0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Filamentos"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control12" type="VBoxContainer" parent="Control/ScrollContainer/VBoxContainer"]
margin_top = 408.0
margin_right = 252.0
margin_bottom = 440.0

[node name="Button" type="Button" parent="Control/ScrollContainer/VBoxContainer/Control12"]
margin_right = 252.0
margin_bottom = 32.0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Microfilamentos"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control13" type="VBoxContainer" parent="Control/ScrollContainer/VBoxContainer"]
margin_top = 442.0
margin_right = 252.0
margin_bottom = 474.0

[node name="Button" type="Button" parent="Control/ScrollContainer/VBoxContainer/Control13"]
margin_right = 252.0
margin_bottom = 32.0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Microtúbulos"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="close" type="TextureButton" parent="Control"]
margin_left = 468.0
margin_top = 11.0
margin_right = 487.0
margin_bottom = 29.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Control/ScrollContainer/VBoxContainer/Control0/Button" to="." method="_add_nucleo"]
[connection signal="pressed" from="Control/ScrollContainer/VBoxContainer/Control1/Button" to="." method="_add_complexo_golgi"]
[connection signal="pressed" from="Control/ScrollContainer/VBoxContainer/Control2/Button" to="." method="_add_cloroplasto"]
[connection signal="pressed" from="Control/ScrollContainer/VBoxContainer/Control3/Button" to="." method="_add_lisossomo"]
[connection signal="pressed" from="Control/ScrollContainer/VBoxContainer/Control4/Button" to="." method="_add_mitocondria"]
[connection signal="pressed" from="Control/ScrollContainer/VBoxContainer/Control5/Button" to="." method="_add_peroxissomo"]
[connection signal="pressed" from="Control/ScrollContainer/VBoxContainer/Control6/Button" to="." method="_add_ret_end_liso"]
[connection signal="pressed" from="Control/ScrollContainer/VBoxContainer/Control7/Button" to="." method="_add_ret_end_rugoso"]
[connection signal="pressed" from="Control/ScrollContainer/VBoxContainer/Control8/Button" to="." method="_add_ribossomo"]
[connection signal="pressed" from="Control/ScrollContainer/VBoxContainer/Control9/Button" to="." method="_add_vacuolo"]
[connection signal="pressed" from="Control/ScrollContainer/VBoxContainer/Control10/Button" to="." method="_add_proteina"]
[connection signal="pressed" from="Control/ScrollContainer/VBoxContainer/Control11/Button" to="." method="_add_filamentos"]
[connection signal="pressed" from="Control/ScrollContainer/VBoxContainer/Control12/Button" to="." method="_add_microfilamentos"]
[connection signal="pressed" from="Control/ScrollContainer/VBoxContainer/Control13/Button" to="." method="_add_microtubulos"]
[connection signal="pressed" from="Control/close" to="." method="_on_close_pressed"]
